--- a/code/gpt_chat.ipynb
+++ b/code/gpt_chat.ipynb
@@ -121,7 +121,7 @@
     {
      "data": {
       "text/markdown": [
-       "As of my latest knowledge update in October 2021, the current President of South Korea is Moon Jae-in. However, please check the most recent and accurate sources as this can change according to their elections."
+       "The current president of South Korea is Moon Jae-in. He has been in office since May 10, 2017."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -171,7 +171,7 @@
     {
      "data": {
       "text/markdown": [
-       "I'm sorry for any confusion. As of my last update, the President of South Korea was Moon Jae-in. However, I would recommend checking the latest sources for the most up-to-date information."
+       "I apologize for any confusion and I appreciate your patience. As of my knowledge up until October 2021, the president of South Korea is Moon Jae-in. However, if you believe this information is outdated, I recommend verifying the current president by checking the most recent sources, as my current information may lag a slight bit behind real-time updates."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -221,13 +221,15 @@
     {
      "data": {
       "text/markdown": [
-       "You can get the latest information from reliable news outlets or government websites. Here are a few suggestions:\n",
+       "You can get the latest information about the president of South Korea or any current affairs from the following sources:\n",
        "\n",
-       "1. The official website of the Republic of Korea (www.korea.net) \n",
-       "2. Major international news outlets like BBC, CNN, or Reuters.\n",
-       "3. Google News – simply typing \"Current President of South Korea\" into the search will typically provide the latest information.\n",
-       "  \n",
-       "Please remember to ensure the sources are credible when searching for such key information."
+       "1. Reputable news outlets: These include international news agencies like BBC, CNN, and Reuters, or South Korean news outlets such as Yonhap News Agency or The Korea Herald.\n",
+       "\n",
+       "2. Official Government Websites: The official website of the South Korean President (Blue House) or the Ministry of Foreign Affairs also provide authoritative information.\n",
+       "\n",
+       "3. Online Encyclopedias: Websites like Britannica or even Wikipedia (though one should cross-check the information) are updated fairly regularly.\n",
+       "\n",
+       "Remember, while online sources can provide valuable up-to-the-minute information, it's essential to ensure the information comes from a reliable and trustworthy source."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -266,9 +268,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "055806b3-e1db-422d-bc2a-d1fd61503b79",
+   "metadata": {},
+   "source": [
+    "### 한국어로 대답을 해볼까?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dbb3a667-5480-47d8-a163-2c9e38dcb186",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GPT.reset(\n",
+    "    role_msg = \n",
+    "    \"\"\"\n",
+    "    Your are a helpful assistant \n",
+    "    대신 한국어로 대답을 해주면 좋겠습니다. \n",
+    "    \"\"\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6bd16c36-9f15-40e1-a14c-c429855a72a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #0087d7; text-decoration-color: #0087d7; font-weight: bold\">[</span><span style=\"color: #0087d7; text-decoration-color: #0087d7\">USER_MSG</span><span style=\"color: #0087d7; text-decoration-color: #0087d7; font-weight: bold\">]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;38;5;32m[\u001b[0m\u001b[38;5;32mUSER_MSG\u001b[0m\u001b[1;38;5;32m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "How's today's weather?"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #00875f; text-decoration-color: #00875f; font-weight: bold\">[</span><span style=\"color: #00875f; text-decoration-color: #00875f\">GPT_OUTPUT</span><span style=\"color: #00875f; text-decoration-color: #00875f; font-weight: bold\">]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;38;5;29m[\u001b[0m\u001b[38;5;29mGPT_OUTPUT\u001b[0m\u001b[1;38;5;29m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "죄송합니다, 저는 실시간 날씨 정보를 제공하지 못합니다. 최신 날씨 정보를 얻으시려면 날씨 앱이나 웹사이트를 참조해주세요."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "GPT.chat(\n",
+    "    user_msg         = \"How's today's weather?\",\n",
+    "    PRINT_USER_MSG   = True,\n",
+    "    PRINT_GPT_OUTPUT = True,\n",
+    "    RESET_CHAT       = False,\n",
+    "    RETURN_RESPONSE  = False,\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e8c274f-25d1-41a5-a99e-e74c8528d7ff",
+   "id": "c4705a84-8792-40b4-b01b-2cd4459c216b",
    "metadata": {},
    "outputs": [],
    "source": []
