--- a/code/gpt_chat.ipynb
+++ b/code/gpt_chat.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "d751d66c-7fde-470d-b624-e83eb4fa121c",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "openai version:[1.3.7]\n"
+      "openai version:[1.13.3]\n"
      ]
     }
    ],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "75fea7a9-422c-4a42-be9f-63db9d33d33c",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
    "source": [
     "# Instantiate GPT helper\n",
     "GPT = GPTchatClass(\n",
-    "    gpt_model = \"gpt-4\",  # 'gpt-3.5-turbo' / 'gpt-4'\n",
+    "    gpt_model = \"gpt-4-turbo\",  # 'gpt-3.5-turbo' / 'gpt-4' / 'gpt-4-turbo'\n",
     "    role_msg  = \"Your are a helpful assistant summarizing infromation and answering user queries.\",\n",
     "    key_path  = \"../key/rilab_key.txt\",\n",
     ")"
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "83b18220-2e49-473e-9d3e-71d60d432bb3",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
     {
      "data": {
       "text/markdown": [
-       "The current president of South Korea is Moon Jae-in. He has been in office since May 10, 2017."
+       "As of my last update in 2023, the current President of South Korea is Yoon Suk-yeol. He assumed office on May 10, 2022. Yoon is a member of the People Power Party and was previously the Prosecutor General of South Korea. Keep in mind that updates or changes might occur, so it's recommended to check the latest sources for the most recent information."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -171,7 +171,7 @@
     {
      "data": {
       "text/markdown": [
-       "I apologize for any confusion and I appreciate your patience. As of my knowledge up until October 2021, the president of South Korea is Moon Jae-in. However, if you believe this information is outdated, I recommend verifying the current president by checking the most recent sources, as my current information may lag a slight bit behind real-time updates."
+       "I apologize if there has been any confusion. To clarify, I provided information based on the most recent data available to me up to early 2023. If there have been changes since then, such as a new election or any other political developments, I recommend checking the latest reliable news sources or the official government website of South Korea for the most current information regarding the presidency."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -221,15 +221,17 @@
     {
      "data": {
       "text/markdown": [
-       "You can get the latest information about the president of South Korea or any current affairs from the following sources:\n",
+       "To obtain the most current and reliable information about the President of South Korea or any other updates, you can explore several sources:\n",
        "\n",
-       "1. Reputable news outlets: These include international news agencies like BBC, CNN, and Reuters, or South Korean news outlets such as Yonhap News Agency or The Korea Herald.\n",
+       "1. **Official Government Websites**: The official website of the President of South Korea or the South Korean government's main portal often provides the latest and most accurate information.\n",
        "\n",
-       "2. Official Government Websites: The official website of the South Korean President (Blue House) or the Ministry of Foreign Affairs also provide authoritative information.\n",
+       "2. **News Outlets**: Reputable news organizations such as the BBC, CNN, The New York Times, and local South Korean news outlets like Yonhap News Agency and Korea Herald can be trusted for up-to-date news.\n",
        "\n",
-       "3. Online Encyclopedias: Websites like Britannica or even Wikipedia (though one should cross-check the information) are updated fairly regularly.\n",
+       "3. **Social Media**: Following official government and news outlet social media accounts can also provide timely updates.\n",
        "\n",
-       "Remember, while online sources can provide valuable up-to-the-minute information, it's essential to ensure the information comes from a reliable and trustworthy source."
+       "4. **Embassies**: Contacting the South Korean embassy or consulate in your country can also be a source of official information.\n",
+       "\n",
+       "These sources should help you find reliable and current information regarding the president of South Korea or any other political developments."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -338,7 +340,7 @@
     {
      "data": {
       "text/markdown": [
-       "죄송합니다, 저는 실시간 날씨 정보를 제공하지 못합니다. 최신 날씨 정보를 얻으시려면 날씨 앱이나 웹사이트를 참조해주세요."
+       "죄송합니다, 저는 실시간 정보를 제공할 수 없습니다. 현재 날씨 정보를 얻으려면 귀하의 지역 날씨를 온라인으로 검색해 주세요."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
