--- a/code/gpt4v_chat.ipynb
+++ b/code/gpt4v_chat.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "# Instantiate GPT4V helper\n",
     "GPT = GPT4VchatClass(\n",
-    "    gpt_model = \"gpt-4-vision-preview\",\n",
+    "    gpt_model = \"gpt-4o\", # \"gpt-4-vision-preview\",\n",
     "    role_msg  = \"You are a helpful agent with vision capabilities; do not respond to objects not depicted in images.\",\n",
     "    key_path  = \"../key/rilab_key.txt\",\n",
     ")"
@@ -74,17 +74,203 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddbbae7a-aba9-45af-b494-862f753a4c37",
+   "id": "697f8478-adae-4ebd-acfc-9c9e2b9aded7",
    "metadata": {},
    "source": [
-    "cat image\n",
+    "### MuJoCo Living room\n",
     "\n",
-    "<img src=\"../img/cat.png\" width=\"300\" />"
+    "<img src=\"../img/mujoco_living_room.png\" width=\"300\" />"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "52b948b3-8962-4a2e-8e2d-697683deba3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #0087d7; text-decoration-color: #0087d7; font-weight: bold\">[</span><span style=\"color: #0087d7; text-decoration-color: #0087d7\">USER_MSG</span><span style=\"color: #0087d7; text-decoration-color: #0087d7; font-weight: bold\">]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;38;5;32m[\u001b[0m\u001b[38;5;32mUSER_MSG\u001b[0m\u001b[1;38;5;32m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "<img1> Describe the image."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #00875f; text-decoration-color: #00875f; font-weight: bold\">[</span><span style=\"color: #00875f; text-decoration-color: #00875f\">GPT_OUTPUT</span><span style=\"color: #00875f; text-decoration-color: #00875f; font-weight: bold\">]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;38;5;29m[\u001b[0m\u001b[38;5;29mGPT_OUTPUT\u001b[0m\u001b[1;38;5;29m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "The image depicts a living room scene with a wooden parquet floor. In the room, there is a gray armchair with a basketball placed on it and a gray tufted sofa. A wooden coffee table is situated between the armchair and the sofa, on which a small, animated character is standing in the middle of a circular area with a few greenish-blue orbs floating around the character. There are two people standing to the right of the coffee table, observing the animated character."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "GPT.chat(\n",
+    "    user_msg = \"<img1> Describe the image.\",\n",
+    "    images   = [\"../img/mujoco_living_room.png\"],\n",
+    "    PRINT_USER_MSG   = True,\n",
+    "    PRINT_GPT_OUTPUT = True,\n",
+    "    RESET_CHAT       = False,\n",
+    "    RETURN_RESPONSE  = False,\n",
+    "    MAX_TOKENS = 512,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f55c8148-56cd-4b8c-a3f0-19eaff657b67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #0087d7; text-decoration-color: #0087d7; font-weight: bold\">[</span><span style=\"color: #0087d7; text-decoration-color: #0087d7\">USER_MSG</span><span style=\"color: #0087d7; text-decoration-color: #0087d7; font-weight: bold\">]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;38;5;32m[\u001b[0m\u001b[38;5;32mUSER_MSG\u001b[0m\u001b[1;38;5;32m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Why do you think the image is rendered from a simulator?"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #00875f; text-decoration-color: #00875f; font-weight: bold\">[</span><span style=\"color: #00875f; text-decoration-color: #00875f\">GPT_OUTPUT</span><span style=\"color: #00875f; text-decoration-color: #00875f; font-weight: bold\">]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;38;5;29m[\u001b[0m\u001b[38;5;29mGPT_OUTPUT\u001b[0m\u001b[1;38;5;29m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Several elements suggest that the image is rendered from a simulator or is computer-generated:\n",
+       "\n",
+       "1. **Character Design**: The small animated character standing on the coffee table has a cartoonish, stylized appearance that is typical of computer graphics.\n",
+       "\n",
+       "2. **Floating Orbs**: The greenish-blue orbs floating around the animated character enhance the impression of a simulated environment.\n",
+       "\n",
+       "3. **Lighting and Shadows**: The lighting and shadows in the image appear uniform and artificial, characteristic of computer-rendered images rather than natural photography.\n",
+       "\n",
+       "4. **Textures and Surfaces**: The textures, such as the smoothness of the furniture and the consistency of the floor pattern, are very clean and precise, a common trait in digital simulations.\n",
+       "\n",
+       "5. **Human Figures**: The two people have a slightly rigid posture and a lack of fine detail that is often seen in computer-generated models rather than real-life photographs.\n",
+       "\n",
+       "These features collectively suggest that the image is not a real-world photo but rather created using simulation or rendering software."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "GPT.chat(\n",
+    "    user_msg = \"Why do you think the image is rendered from a simulator?\",\n",
+    "    images   = None,\n",
+    "    PRINT_USER_MSG   = True,\n",
+    "    PRINT_GPT_OUTPUT = True,\n",
+    "    RESET_CHAT       = False,\n",
+    "    RETURN_RESPONSE  = False,\n",
+    "    MAX_TOKENS = 256,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a529141-647c-4796-9a7d-978e183d04e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6c4f9678-0d04-4b00-9512-cd57c181dcc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "GPT.reset()\n",
+    "print (\"Done.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddbbae7a-aba9-45af-b494-862f753a4c37",
+   "metadata": {},
+   "source": [
+    "### cat image\n",
+    "<img src=\"../img/cat.png\" width=\"300\" />"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "9176daf3-c6bd-4cf6-a4bd-10a06eb4f502",
    "metadata": {},
    "outputs": [
@@ -129,7 +315,7 @@
     {
      "data": {
       "text/markdown": [
-       "The image shows a golden-brown and white kitten with a fluffy coat and striking tabby markings around its eyes that resemble eyeliner. The kitten appears to be standing on its hind legs with one front paw raised as if it is reaching for something or playing. It has a thoughtful or curious expression on its face, and its eyes are looking upwards towards the direction of the raised paw. The background is a simple, light blue, providing a clear and uncluttered backdrop that contrasts nicely with the kitten's fur."
+       "The image shows a cute fluffy kitten sitting against a solid light blue background. The kitten has a fur coat of light brown, cream, and white colors, and its ears are perked up. The kitten is raising one of its front paws upwards as if reaching for something or waving. Its eyes are looking upwards, following the direction of its raised paw. The overall appearance of the kitten and the background give a clean, minimalist feel to the photograph."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -140,24 +326,20 @@
     }
    ],
    "source": [
-    "PRINT_USER_MSG   = True\n",
-    "PRINT_GPT_OUTPUT = True\n",
-    "RESET_CHAT       = False\n",
-    "RETURN_RESPONSE  = False\n",
     "GPT.chat(\n",
-    "    user_msg=\"<img1> Describe the image.\",\n",
-    "    images=[\"../img/cat.png\"],\n",
-    "    PRINT_USER_MSG=PRINT_USER_MSG,\n",
-    "    PRINT_GPT_OUTPUT=PRINT_GPT_OUTPUT,\n",
-    "    RESET_CHAT=RESET_CHAT,\n",
-    "    RETURN_RESPONSE=RETURN_RESPONSE,\n",
-    "    MAX_TOKENS = 256,\n",
+    "    user_msg = \"<img1> Describe the image.\",\n",
+    "    images   = [\"../img/cat.png\"],\n",
+    "    PRINT_USER_MSG   = True,\n",
+    "    PRINT_GPT_OUTPUT = True,\n",
+    "    RESET_CHAT       = False,\n",
+    "    RETURN_RESPONSE  = False,\n",
+    "    MAX_TOKENS = 512,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "93a061a0-7bbb-4ed0-ac8d-78af4e3d53b2",
    "metadata": {},
    "outputs": [
@@ -202,7 +384,7 @@
     {
      "data": {
       "text/markdown": [
-       "The color of the background is light blue."
+       "The background color in the image is a solid light blue."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -214,13 +396,13 @@
    ],
    "source": [
     "GPT.chat(\n",
-    "    user_msg=\"What is the color of the background?\",\n",
-    "    images=None,\n",
-    "    PRINT_USER_MSG=PRINT_USER_MSG,\n",
-    "    PRINT_GPT_OUTPUT=PRINT_GPT_OUTPUT,\n",
-    "    RESET_CHAT=RESET_CHAT,\n",
-    "    RETURN_RESPONSE=RETURN_RESPONSE,\n",
-    "    MAX_TOKENS = 256,\n",
+    "    user_msg = \"What is the color of the background?\",\n",
+    "    images   = None,\n",
+    "    PRINT_USER_MSG   = True,\n",
+    "    PRINT_GPT_OUTPUT = True,\n",
+    "    RESET_CHAT       = False,\n",
+    "    RETURN_RESPONSE  = False,\n",
+    "    MAX_TOKENS = 512,\n",
     ")"
    ]
   },
@@ -229,14 +411,13 @@
    "id": "dc52ffca-90bd-4f98-ab90-3a5e1215719c",
    "metadata": {},
    "source": [
-    "cat image\n",
-    "\n",
+    "### dog image\n",
     "<img src=\"../img/dog.png\" width=\"300\" />"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "6b968897-3ee3-417a-968d-fae4a662c856",
    "metadata": {},
    "outputs": [
@@ -281,7 +462,7 @@
     {
      "data": {
       "text/markdown": [
-       "The main difference between this image and the previous one is the subject. The current image contains a dog, whereas the previous image featured a cat. This dog has a black and tan face with a white patch on its nose and forehead, and pointed ears. The background is a pale pink color, contrasting with the light blue background in the image of the cat."
+       "The main difference between the two images is the subject. The first image features a kitten, while the second image features a dog. Additionally, the background colors are different: the first image has a light blue background, whereas the second image has a light pink background."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -293,13 +474,13 @@
    ],
    "source": [
     "GPT.chat(\n",
-    "    user_msg=\"<img1> What is the main difference between this image and the previous images?\",\n",
-    "    images=[\"../img/dog.png\"],\n",
-    "    PRINT_USER_MSG=PRINT_USER_MSG,\n",
-    "    PRINT_GPT_OUTPUT=PRINT_GPT_OUTPUT,\n",
-    "    RESET_CHAT=RESET_CHAT,\n",
-    "    RETURN_RESPONSE=RETURN_RESPONSE,\n",
-    "    MAX_TOKENS = 256,\n",
+    "    user_msg = \"<img1> What is the main difference between this image and the previous images?\",\n",
+    "    images   = [\"../img/dog.png\"],\n",
+    "    PRINT_USER_MSG   = True,\n",
+    "    PRINT_GPT_OUTPUT = True,\n",
+    "    RESET_CHAT       = False,\n",
+    "    RETURN_RESPONSE  = False,\n",
+    "    MAX_TOKENS = 512,\n",
     ")"
    ]
   },
